# template

./: LICENSE  README.md  pyproject.toml
scripts/: get_version  run_linters
