[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[project]
name = "name"
version = "0.1.0"
description = "Description"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = []

[tool.poetry.group.dev.dependencies]
faker = ">=37,<38"
isort = ">=6,<7"
pre-commit = ">=4,<5"
pytest = ">=8,<9"
pytest-cov = ">=6,<7"
ruff = ">=0.11,<1"
poetry-core = ">=2,<3"

[tool.isort]
line_length = 120
multi_line_output = 3 # Use parentheses for group
include_trailing_comma = true  # Incldue coma in the end of the line
use_parentheses = true  # Use parentheses for multiline imports
combine_as_imports = true  # Allow group imports with aliases
lines_after_imports = 2
force_grid_wrap = 2

[tool.ruff]
include = ["src/**/*.py"]
fix = true

[tool.ruff.lint]
extend-select = [
    "ANN", # flake8-anotations
    "E", # pycodestyle err
    "W", # pycodestyle warn
    "F", # Pyflakes
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "Q", #
    "D", # Enable check docstrings
]

extend-ignore = [
    'D100', # Docs in a public module
    'D101', # Docs in public class
    'D104', # Docs in a public package - __init__.py
    'D105', # Docs in magic methods
    'D106', # Docs in public nested class
    'ANN204', # Missing return type annotation for special method `__init__`
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning"
pythonpath = [
    "./src"
]
addopts = """\
  --strict-markers \
  --show-capture=no  \
  --cov-fail-under=90 \
"""

[tool.coverage.report]
precision = 2
exclude_lines = ["pragma: no cover"]
